diesel_compile_tests/tests/compile-fail/boxed_queries_must_be_used_with_proper_connection.rs
#[macro_use]
extern crate diesel;

use diesel::*;
use diesel::pg::Pg;

table! {
    users {
        id -> Integer,
    }
}

fn main() {
    let connection = SqliteConnection::establish("").unwrap();
    users::table.into_boxed::<Pg>().load::<(i32,)>(&connection);
    //~^ ERROR type mismatch
}
